--- a/com.hydrologis.polymap.geopaparazzi/plugin.xml
+++ b/com.hydrologis.polymap.geopaparazzi/plugin.xml
@@ -8,5 +8,13 @@
             class="com.hydrologis.polymap.geopaparazzi.importer.GeopaparazziImporterFactory">
       </importer>
    </extension>
+   <extension
+         point="org.eclipse.equinox.http.registry.servlets">
+      <servlet
+            alias="/stage_gpproject_upload"
+            class="com.hydrologis.polymap.geopaparazzi.servlets.GeopaparazziUploadServlet"
+            load-on-startup="true">
+      </servlet>
+   </extension>
 
 </plugin>
