First code to get Geopap's SqliteDb in the catalog

--- a/com.hydrologis.polymap.geopaparazzi/build.properties
+++ b/com.hydrologis.polymap.geopaparazzi/build.properties
@@ -1,9 +1,8 @@
-source.. = src/,src-test/
+source.. = src/
 output.. = build/eclipse/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/commons-compress-1.9.jar,\
                resources/,\
                .classpath,\
                lib/jgt-hortonmachine-0.8.1-SNAPSHOT.jar,\
