--- a/com.hydrologis.polymap.geopaparazzi/plugin.xml
+++ b/com.hydrologis.polymap.geopaparazzi/plugin.xml
@@ -8,5 +8,11 @@
             class="com.hydrologis.polymap.geopaparazzi.importer.GeopaparazziImporterFactory">
       </importer>
    </extension>
+   <extension
+         point="org.polymap.core.catalog.resolverProviders">
+      <resolver
+            class="com.hydrologis.polymap.geopaparazzi.catalog.GPResolverProvider">
+      </resolver>
+   </extension>
 
 </plugin>
