#4: Importer: error while creating layers (http://github.com/moovida/hydrologis4polymap/issues/4)
Actual fixes are in polymap4-core and polymap4-p4

  - Importer: add sleep() to allow map to settle after NewLayerOperation 
  - build: scannotations is needed for a geotools factory; otherwise Shape import is not working

--- a/com.hydrologis.polymap.geopaparazzi/build.properties
+++ b/com.hydrologis.polymap.geopaparazzi/build.properties
@@ -13,4 +13,5 @@ bin.includes = META-INF/,\
                lib/slf4j-api-1.7.5.jar,\
                lib/slf4j-simple-1.7.5.jar,\
                lib/sqlite-jdbc-3.8.11.2.jar,\
-               lib/gt-process-16.1.jar
+               lib/gt-process-16.1.jar,\
+               lib/scannotation-1.0.3.jar
