--- a/com.hydrologis.polymap.geopaparazzi/.classpath
+++ b/com.hydrologis.polymap.geopaparazzi/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/scannotation-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-process-16.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
