#7: Images (http://github.com/moovida/hydrologis4polymap/issues/7)
Simple contribution to FeaturePanel

--- a/com.hydrologis.polymap.geopaparazzi/plugin.xml
+++ b/com.hydrologis.polymap.geopaparazzi/plugin.xml
@@ -32,5 +32,12 @@
             class="com.hydrologis.polymap.geopaparazzi.catalog.GPResolverProvider">
       </resolver>
    </extension>
+   <extension
+         point="org.polymap.rhei.batik.contributions">
+      <contributions
+            class="com.hydrologis.polymap.geopaparazzi.FeaturePanelContribution"
+            id="com.hydrologis.polymap.geopaparazzi.FeaturePanelContribution">
+      </contributions>
+   </extension>
 
 </plugin>
