--- a/com.hydrologis.polymap.geopaparazzi/.classpath
+++ b/com.hydrologis.polymap.geopaparazzi/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.7.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jgt-dbs-0.8.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jgt-dbs-0.8.1-SNAPSHOT.jar" sourcepath="/home/falko/workspace-mapstart2/jgrasstools/dbs"/>
 	<classpathentry exported="true" kind="lib" path="lib/jgt-hortonmachine-0.8.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jgt-jgrassgears-0.8.1-SNAPSHOT.jar" sourcepath="/home/falko/workspace-mapstart2/jgrasstools/jgrassgears"/>
 	<classpathentry exported="true" kind="lib" path="lib/jgt-modules-0.8.1-SNAPSHOT.jar"/>
