--- a/com.hydrologis.polymap.jgt/build.properties
+++ b/com.hydrologis.polymap.jgt/build.properties
@@ -10,4 +10,5 @@ bin.includes = META-INF/,\
                lib/jgt-modules-0.8.1.jar,\
                lib/jgt-oms3-0.8.1.jar,\
                lib/joda-time-2.9.4.jar,\
-               lib/scannotation-1.0.3.jar
+               lib/scannotation-1.0.3.jar,\
+               plugin.xml
