--- a/com.hydrologis.polymap.geopaparazzi/plugin.xml
+++ b/com.hydrologis.polymap.geopaparazzi/plugin.xml
@@ -11,17 +11,17 @@
    <extension
          point="org.eclipse.equinox.http.registry.servlets">
       <servlet
-            alias="/stage_gpproject_upload"
+            alias="/gpproject_upload"
             class="com.hydrologis.polymap.geopaparazzi.servlets.GeopaparazziUploadServlet"
             load-on-startup="true">
       </servlet>
       <servlet
-            alias="/stage_gplist_download"
+            alias="/gplist_download"
             class="com.hydrologis.polymap.geopaparazzi.servlets.GeopaparazziProjectListServlet"
             load-on-startup="true">
       </servlet>
       <servlet
-            alias="/stage_gpproject_download"
+            alias="/gpproject_download"
             class="com.hydrologis.polymap.geopaparazzi.servlets.GeopaparazziDownloadServlet"
             load-on-startup="true">
       </servlet>
